<resources>
    <string name="skillshare">Skillshare</string>
    <string name="app_name">@string/skillshare</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="activity_settings_title">Settings</string>
    <string name="title_activity_categories">Select a category</string>
    <string name="title_activity_course_detail">CourseDetailActivity</string>
    <string name="title_activity_class_detail">ClassDetailActivity</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="description">Media Controls</string>
    <string name="title_activity_download">DownloadActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="rate_dialog_title">Rate this app</string>
    <string name="rate_dialog_message">If you enjoy this app, would you mind taking a moment to rate it? Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel">Later</string>
    <string name="rate_dialog_no">No, Thanks</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="filters">Filters</string>
    <string name="apply">Apply</string>
    <string name="title_activity_old_onboarding">OnboardingBeginActivity</string>
    <string name="got_it">Got it!</string>
    <string name="title_activity_project_detail">ProjectDetailActivity</string>
    <string name="like">Like</string>
    <string name="liked">Liked</string>
    <string name="project_text">Projects</string>
    <string name="title_activity_student_list">StudentListActivity</string>
    <string name="no_students">No one has enrolled in this class.</string>
    <string name="no_projects_subtitle">Try a different filter or reset your filters to view trending projects.</string>
    <string name="no_projects_title">No Projects</string>
    <string name="title_activity_project_list">Projects</string>
    <string name="class_project">Class Project:</string>
    <string name="no_projects_posted">No one has posted a project</string>
    <string name="title_activity_reviews">ReviewsActivity</string>
    <string name="testimonials">Testimonials</string>
    <string name="no_reviews">This class hasn’t been reviewed</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="me">Me</string>
    <string name="no_activity_title_me">No activity yet</string>
    <string name="no_activity_subtitle_me">Classes you teach, projects you create, and skills you follow will show up here.</string>
    <string name="no_activity_subtitle_other">Any classes taught, projects created, and skills followed will show up here.</string>
    <string name="projects_popup_message"><![CDATA[The gallery is a feed of new & popular projects created in Skillshare classes.]]></string>
    <string name="user_list_activity_profile">UserListActivity</string>
    <string name="double_dash">--</string>
    <string name="following_list_title">Following</string>
    <string name="following_list_activity_empty_message">Not following anyone just yet.</string>
    <string name="followers_list_activity_empty_message">No followers just yet.</string>
    <string name="followers_list_title_singular">Follower</string>
    <string name="followers_list_title_plural">Followers</string>
    <string name="abbreviate_number_string_millions_suffix">M</string>
    <string name="abbreviate_number_string_thousands_suffix">K</string>
    <string name="class_details_holder_reviews_title">Reviews</string>
    <string name="for_you_page_title">For You</string>
    <string name="fragment_category_details_header_follow_button_title">Follow</string>
    <string name="following">Following</string>
    <string name="profile_tag_cloud_title">Skills You Follow</string>
    <string name="successfully_removed_class_message">Class removed</string>
    <string name="error_removing_class_message">Unfortunately there was an error removing this class</string>
    <string name="category_details_activity_title">CategoryDetailsActivity</string>
    <string name="profile_completed_courses_row_title">Completed</string>
    <string name="see_all_button_text">See All</string>
    <string name="profile_teaching_courses_row_title">Teaching</string>
    <string name="profile_projects_row_title">Projects</string>
    <string name="me_page_followed_skills_row_title">Skills You Follow</string>
    <string name="fragment_profile_private_user_message">This user has a private profile</string>
    <string name="profile_enrolled_courses_row_title">Enrolled</string>
    <string name="profile_saved_courses_row_title">Saved</string>
    <string name="view_my_classes_enrolled_classes_empty_title">You aren’t enrolled in any classes</string>
    <string name="view_my_classes_enrolled_classes_empty_sub_title">Once you’ve enrolled in some classes they’ll show up here</string>
    <string name="view_my_classes_enrolled_classes_empty_discover_classes_button_title">Discover Classes</string>
    <string name="view_my_classes_saved_courses_empty_view_sub_title">Saved classes will show up here until you’re ready to get started on them</string>
    <string name="view_my_classes_completed_courses_empty_view_sub_title">Classes that you mark as complete will appear here</string>
    <string name="my_courses_page_title">My Classes</string>
    <string name="view_my_classes_saved_courses_empty_view_title">You don’t have any saved classes</string>
    <string name="view_my_classes_completed_courses_empty_view_title">You haven’t completed any classes yet</string>
    <string name="view_profile_projects_empty_view_title">You don’t have any projects yet</string>
    <string name="view_profile_projects_empty_view_sub_title">Projects that you create will show up here</string>
    <string name="view_profile_teaching_courses_empty_view_title">You aren’t teaching any classes yet</string>
    <string name="view_profile_teaching_courses_empty_view_sub_title">Classes that you teach will show up here</string>
    <string name="un_enroll_in_course_dialog_title">Are you sure?</string>
    <string name="un_enroll_in_course_dialog_message">Unenrolling from this class will remove it from your profile. You will no longer receive notifications from this class. You will still be able to access and edit your class project from skillshare.com.</string>
    <string name="un_enroll_in_course_dialog_un_enroll_button_text">Unenroll</string>
    <string name="un_enroll_in_course_dialog_cancel_button_text">Cancel</string>
    <string name="projects_page_title">Student Projects</string>
    <string name="me_page_title">Me</string>
    <string name="search_page_title">Search</string>
    <string name="activity_search_bar_hint">Search classes, skills, teachers</string>
    <string name="class_details_download_message">Download</string>
    <string name="because_you_follow_prefix">Because you follow </string>
    <string name="trending_title">Trending</string>
    <string name="free_premium_tag_free_title">Free Class</string>
    <string name="free_premium_tag_premium_title">Premium Class</string>
    <string name="premium_banner_title">Available to Premium Members</string>
    <string name="premium_banner_subtitle">Learn more</string>
    <string name="free_discover_row_title">Trending Free Classes</string>
    <string name="onboarding_info_title">Learning Made Personal</string>
    <string name="follow_skills_tooltip_message">You can manage the tags \n you follow here</string>
    <string name="next">Next</string>
    <string name="title_activity_onboarding">Onboarding</string>
    <string name="personalize_tag_saved_message">Changes Saved</string>
    <string name="chromecast">chromecast</string>
    <string name="menu_cast">Cast to</string>
    <string name="menu_disconnect_cast_title">To stop casting:</string>
    <string name="menu_disconnect_cast_line_item_title">Disconnect from %s</string>
    <string name="cast_connect_item_description">Casting %s</string>
    <string name="premium_member">Premium Member</string>
    <string name="basic_member">Free Membership</string>
    <string name="only_download_over_wifi_title">Only Download Over Wi-Fi</string>
    <string name="trouble_syncing_your_subscription_message">It looks like there’s some trouble syncing your subscription to Skillshare. We’ll try again automatically the next time you launch the app</string>
    <string name="invalid_subscription_token_message">Google Play did not recognize your subscription. Please contact us if your account doesn’t behave as it should.</string>
    <string name="subscription_synced_successfully">We’ve successfully synced your recent purchase of Skillshare Premium!</string>
    <string name="subscription_not_synced_title">Purchased But Not Synced</string>
    <string name="subscription_not_synced">Your purchase was successful but we were unable to sync your account.</string>
    <string name="title_activity_video_test">VideoTestActivity</string>
    <string name="lessons_fragment_title">Lessons</string>
    <string name="projects_fragment_title">Projects</string>
    <string name="discussions_fragment_title">Discussions</string>
    <string name="more_button_title">more</string>
    <string name="course_actions_save_title">Save</string>
    <string name="saved_course_for_later">Saved class for later</string>
    <string name="unsaved_course">Class removed</string>
    <string name="button_manage">Manage</string>
    <string name="offline_try_again">Please check your internet connection and try again</string>
    <string name="you_re_offline">You’re offline</string>
    <string name="view_downloaded_courses">View Downloaded Courses</string>
    <string name="retry">Retry</string>
    <string name="logged_in_as">Logged in as %s</string>
    <string name="need_help_format">Need help? ^1</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_first_name">First Name</string>
    <string name="sign_up_last_name">Last Name</string>
    <string name="sign_in_email_address">Email Address</string>
    <string name="sign_in_password">Password</string>
    <string name="password_length">Passwords should be at least 8 characters long.</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_personalized_notifications">Personalized Notifications</string>
    <string name="settings_notifications_subtitle_on">You’re all set to get personalized updates and alerts.</string>
    <string name="settings_reminders">Weekly Reminders</string>
    <string name="settings_reminders_subtitle">Set aside time every week for learning.</string>
    <string name="settings_membership">Membership</string>
    <string name="settings_membership_footer">You can manage your%s subscription %s</string>
    <string name="settings_basic_member">Basic Member</string>
    <string name="settings_offline_access">Offline Access</string>
    <string name="settings_get_in_touch">Get In Touch</string>
    <string name="settings_about">About</string>
    <string name="settings_contact_support">Contact Support</string>
    <string name="settings_share_feedback">Share Feedback</string>
    <string name="settings_terms_of_service">Terms of Service</string>
    <string name="settings_privacy">Privacy Policy</string>
    <string name="settings_developers">Developers</string>
    <string name="settings_developer_options">Developer Options</string>
    <string name="button_turn_on">Turn On</string>
    <string name="button_upgrade">Upgrade</string>
    <string name="button_remove_all_downloaded_classes">Remove All Downloaded Classes</string>
    <string name="button_sign_out">Sign Out</string>
</resources>