<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/offline_state_parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:colorBackground"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/reload_icon"
        style="@style/SkStyle.Icon.Large"
        app:srcCompat="@drawable/ic_offline" />

    <TextView
        android:id="@+id/header"
        android:gravity="center"
        style="@style/SkStyle.Text.Header.H5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_large"
        android:text="@string/you_re_offline" />

    <TextView
        android:id="@+id/offline_tip_text_view"
        style="@style/SkStyle.Text.Body2"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_small"
        android:text="@string/offline_try_again" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/offline_retry_button"
        style="@style/SkStyle.Button.Primary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/retry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/downloaded_courses_button"
        style="@style/SkStyle.Button.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/view_downloaded_courses"
        android:visibility="gone" />
</LinearLayout>

